syntax = "proto3";
 package demo;
 option go_package = "go-gateway-protos/demo";
 import "google/api/annotations.proto";

 service DemoService {
   rpc Echo(StringMessage) returns (StringMessage) {
      option (google.api.http) = {
        post: "/v1/example/echo"
        body: "*"
      };
   }
   rpc SayHello (HelloRequest) returns (HelloReply) {}
 }

 message StringMessage {
   string value = 1;
 }

 message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}